--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
   <title>Frontend Mentor | 3-column preview card component</title>
 
+  <!--Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
+    rel="stylesheet">
+
 </head>
 
 <body>
