--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
     rel="stylesheet">
 
+  <!--My CSS-->
+  <link rel="stylesheet" href="./styles.css">
+
 </head>
 
 <body>
