--- a/index.html
+++ b/index.html
@@ -24,32 +24,32 @@
 <body>
   <main>
     <article class="card">
-      <div class="column">
+      <div class="vehicle vehicle--sedan">
         <img src="./images/icon-sedans.svg" alt="sedan vehicle">
         <h3>Sedans</h3>
         <p>
           Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
           or on your next road trip.
         </p>
-        <button>Learn More</button>
+        <a class="vehicle__learn-more">Learn More</a>
       </div>
-      <div class="column">
+      <div class="vehicle vehicle--suv">
         <img src="./images/icon-suvs.svg" alt="suv vehicle">
         <h3>SUVs</h3>
         <p>
           Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
           and off-road adventures.
         </p>
-        <button>Learn More</button>
+        <a class="vehicle__learn-more">Learn More</a>
       </div>
-      <div class="column">
+      <div class="vehicle vehicle--luxury">
         <img src="/images/icon-luxury.svg" alt="luxury vehicle">
         <h3>Luxury</h3>
         <p>
           Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
           rental and arrive in style.
         </p>
-        <button>Learn More</button>
+        <a class="vehicle__learn-more">Learn More</a>
       </div>
     </article>
 
